--- a/history
+++ b/history
@@ -1,14 +1,16 @@
 Хочу рассказать про dap — интересный и необычный язык реактивных правил для написания, в частности, веб-фронтендов.
 
-Для затравки простая задачка: взять список неких сказочных персонажей (список позаимствован из туториала по Angular) по адресу https://dap.js.org/samples/heroes.json и вывести их имена обычным html-списком; при нажатии на имя героя — писать его id в консоль. 
+Для затравки простая задачка: взять список неких пользователей (воспользуемся тестовыми данными, любезно предоставляемыми сервисом https://jsonplaceholder.typicode.com/) и вывести их имена обычным html-списком; при нажатии на имя пользователя — показать алерт с его id. 
 
 Это, конечно, легко делается и на React, и на Angular, и на Vue. Вопрос: <i>насколько</i> легко? В dap это делается так:
 
 <source lang="javascript">
-'UL.heroes'.d("* :query`https://dap.js.org/samples/heroes.json"
-	,'LI'.d("! .name").ui("log .id")
+'UL.users'.d("* :query`https://jsonplaceholder.typicode.com/users"
+	,'LI'.d("! .name").ui("? .id:alert")
 )
 </source>
+
+(*Этот и последующие dap-примеры можно интерактивно потестить в песочнице https://dap.js.org/test.html)
 
 Это первая пришедшая в голову тривиальная задачка и тривиальный же способ ее решения. На dap удобно писать "в лоб", не городя огород из  классов, компонентов и прочего ритуального реквизита. Что вижу, то пою. Но "пою" не на javascript или его производных, а на языке <b>dap-правил</b>, специально заточенном на простое и лаконичное описание реактивных зависимостей между элементами.
 
@@ -18,28 +20,36 @@
 	<li>оператор <code>*</source> для итерации по данным,</li>
 	<li>конвертер <code>:query</source> для асинхронной "конвертации" урла в полученные с него данные,</li>
 	<li>оператор <code>!</source> для "печати" в генерируемый элемент,</li>
-	<li>оператор <code>log</source> для вывода в консоль.</li>
+	<li>конвертер <code>alert</source>, магически конверитрующий любые значения в алерт</li>
 </ul>
 
-Если вы знакомы с HTML, то слова UL и LI вам, вероятно, известны. Да, это теги для ненумерованного списка и для элемента списка, соответственно. А если и CSS вам не чужд, то и смысл записи UL.heroes вам должен быть понятен: это элемент UL с классом "heroes". На HTML это писалось бы <code>&lt;UL class="heroes"&gt;</source>, но нам эти сложности с атрибутами и угловыми скобками ни к чему — dap использует лаконичную нотацию, очень похожую на CSS. Хотя и атрибуты при надобности в этой нотации возможны, например: <code>'FORM action=send.php method=post'</source>.
+Если вы знакомы с HTML, то слова UL и LI вам, вероятно, известны. Да, это теги для ненумерованного списка и для элемента списка, соответственно. А если и CSS вам не чужд, то и смысл записи UL.users вам должен быть понятен: это элемент UL с классом "users". На HTML это писалось бы <code>&lt;UL class="users"&gt;</source>, но нам эти сложности с атрибутами и угловыми скобками ни к чему — dap использует лаконичную нотацию, очень похожую на CSS. Хотя и атрибуты при надобности в этой нотации возможны, например: <code>'FORM action=send.php method=post'</source>.
 
 Кстати: вы заметили, что этот пример написан на обычном javascript, а сами dap-правила это просто строки? И сигнатуры элементов ("теги") — тоже строки, просто в одинарных кавычках. Да, код dap-приложения выглядит непривычно, но это — чистый javascript, готовый к употреблению: его не нужно транспилировать из исходников на новомодных языках (что, конечно, не помешает вам этими модными языками пользоваться при желании).
 
-Чуть усложним задачку, добавив зависимостей: пусть при нажатии на героя его id и name отображаются крупненько в элементе H2, а под ним пусть будет TEXTAREA с некой инфой по данному герою, которая берется с сервера по адресу https://dap.js.org/samples/hero-info.php?id={id выбранного героя}. И вот еще: чтобы эту инфу можно было править и отправлять обратно на сервер. Вот так вот сразу.
+Чуть усложним задачку, добавив зависимостей: пусть при нажатии на имя пользователя его id и name отображаются крупненько в элементе H2, под ними пусть будет имейл, а также все его "посты", которые берутся из <code>/posts?userId={id выбранного пользователя}</code>.
 
 <source lang="javascript">
-'heroes'.d("$hero="
-	,'UL'.d("* :query`https://dap.js.org/samples/heroes.json"
-		,'LI'.d("! .name").ui("$hero=$")
+'heroes'.d("$user=" // изначально $user не выбран
+
+	,'UL.users'.d("* :query`https://jsonplaceholder.typicode.com/users" // для каждого пользвателя из списка
+		,'LI'	.d("! .name") // вывести содержимое поля .name
+			.ui("$user=$") // при нажатии выбрать этого пользователя
 	)
-	,'H2'.d("! $hero.id `: $hero.name")
-	,'TEXTAREA'
-		.d("! (`https://dap.js.org/samples/hero-info.php? $hero.id)uri:query")
-		.ui("( (`https://dap.js.org/samples/hero-info.php? $hero.id #:value@info)post:query `Saved `Failed)?!:alert")
+	
+	,'details'.d("*@ $user" // для выбранного $user выполнить следующее:
+		,'H2'.d("! .id `: .name") // вывести его .id и .name,
+		,'A'.d("!! .email@ (`mailto: .email)concat@href") // дать активную ссылку на .email,
+		
+		,'posts'.d("* (`https://jsonplaceholder.typicode.com/posts? .id@userId )uri:query" // и показать его посты
+			,'H3'.d("! .title")
+			,'p'.d("! .body")
+		)
+	)
 )
 </source>
 
-Здесь уже имеем зависимость содержимого элементов H2 и TEXTAREA от того, какой герой выбран. Выбранный герой, таким образом, оказывается переменной состояния. Такие переменные в dap-правилах обозначаются префиксом <code>$</code> (как s в "state"). При нажатии на любой из элементов LI изменяется содержимое переменной <code>$hero</code>, на что элементы H2 и TEXTAREA автоматически реагируют и обновляются. Каким образом H2 и TEXTAREA узнают, что надо бы обновиться? Очень просто: в их правилах генерации присутствует обращение к переменной <code>$hero</code>, а в правиле реакции элемента LI эта переменная как раз и изменяется.
+Здесь уже имеем зависимость содержимого элемента <code>'details'</code> (что в переводе н HTML означает <code>&lt;DIV class="details"&gt;</code>) от того, какой пользователь выбран. Выбранный пользователь, таким образом, оказывается переменной состояния. Такие переменные в dap-правилах обозначаются префиксом <code>$</code> (как s в "state"). При нажатии на любой из элементов LI изменяется содержимое переменной <code>$user</code>, на что элемент <code>'details'</code> автоматически реагирует и обновляется. Каким образом <code>'details'</code> узнает, что надо бы обновиться? Очень просто: в его правиле генерации присутствует обращение к переменной <code>$user</code>, а в правиле реакции элемента LI эта переменная как раз и изменяется.
 
 Правила генерации — те, которые указываются с помощью метода <code>.d</code> — исполняются на фазе построения элемента. Правила реакции задаются методом <code>.ui</code> и исполняются при взаимодействии пользователя с элементом. Это два самых часто употребимых типа правил; кроме них есть еще несколько типов, но о них как-нибудь потом.
 
@@ -48,7 +58,8 @@
 В языке нет ключевых слов. Зарезервированы символы <code>.,$@:`(){}</code> и пробел, все остальное может использоваться свободно. В частности, идентификаторы могут содержать, или состоять целиком, например, из символов !?* и т.п. Кому-то это покажется дикостью, но на деле это очень, очень удобно. Например, самыми часто используемыми в dap являются операторы (кстати, имена операторов — тоже идентификаторы):
 
 <ul>
-	<li><code>!</code> - вывод значения, что-то вроде <i>print</i></li>
+	<li><code>!</code> - вывод значения в элемент, что-то вроде <i>print</i></li>
+	<li><code>!!</code> - установка свойства (атрибута) элемента, что-то вроде <i>setAttribute</i></li>
 	<li><code>?</code> - условный оператор, что-то вроде <i>if</i></li>
 	<li><code>*</code> - мультиплексор, или итератор, что-то вроде <i>for</i></li>
 </ul>
@@ -58,9 +69,9 @@
 А кто не сталкивался с ситуацией, когда сидишь и тупишь, придумывая имя для переменной? Хотите верьте, хотите нет, в моем dap-коде практически все "булевы" (да/нет) переменные именуются <code>$?</code> (где <code>$</code> — это префикс переменной состояния, а собственно имя состоит просто из знака вопроса). Мне просто лень придумывать им имена, а потом еще и печатать их в нескольких местах. При этом никогда не возникает никаких сложностей с пониманием, что эта переменная означает в каждом конкретном месте: благодаря компактности и обозримости dap-кода, вся область действия такой переменной обычно умещается в несколько строк, и всегда понятно что к чему.
 
 <source lang="javascript">
-'toggle'.d("$?=" // define $? and set its value to 'nothing', sort of false
-	,'BUTTON'.d("! `Toggle").ui("$?=$?:!") // on click, negate $?, as in x=!x
-	,'on'.d("? $?; `✓") // show check mark if $? is set
+'toggle'.d("$?=" // определяем $? и инициируем ее 'ничем' (удобная разновидность false)
+	,'BUTTON'.d("! `Toggle").ui("$?=$?:!") // кнопкой инвертируем $?, как в x=!x
+	,'on'.d("? $?; ! `✓") // показать галочку если $? не пустой
 )
 </source>
 
@@ -70,8 +81,8 @@
 
 <source lang="javascript">
 'whoami'.d("$fruit="
-	'H3'.d("! ($fruit msg.fruit-selected msg.please-select)?! $fruit")
-	'UL'.d("* fruit"
+	,'H3'.d("! ($fruit msg.fruit-selected msg.please-select)?! $fruit")
+	,'UL'.d("* fruit"
 		,'LI'.d("! .fruit").ui("$fruit=.")
 	)
 )
@@ -89,18 +100,18 @@
 Но в словаре хранятся не только текстовые данные, а вообще любые повторно используемые сущности. В том числе, параметризуемые шаблоны, или "компоненты", как их называют в других фреймворках:
 
 <source lang="javascript">
-'multiselect'.("$color= $size="
+'multiselect'.d("$color= $size="
 	,'H3'.d("! (($color $size)? (selected $color $size)spaced not-selected)?!")
-	,'size'.d("$!=select(sizes@options)").u("$size=$!.value")
-	,'color'.d("$!=select(colors@options)").u("$color=$!.value")
+	,'size'.d("$!=select(sizes@options)").u("$size=$!.value") // использовать шаблон select с данными из sizes
+	,'color'.d("$!=select(colors@options)").u("$color=$!.value") // использовать шаблон select с данными из colors
 )
 .DICT({
-	select: 'SELECT'.d("* .options@value"
-			,'OPTION'.d("!! .value")
+	select: 'SELECT'.d("* .options@value" // этот шаблон используется выше
+			,'OPTION'.d("! .value")
 		).ui(".value=#:value"),
 		
 	sizes: ["XS","S","M","L","XL"],
-	colors: "white black brown yellow pink".split(" "),// when you're lazy
+	colors: "white black brown yellow pink".split(" "), // когда лень писать массив
 	
 	"not-selected": "Select size and color please",
 	selected: "Selected specs:"
@@ -118,9 +129,9 @@
 })
 </source>
 
-Я, правда, в этом смысла особого не вижу, и обычно выношу в словарь только те фрагменты, которые реально используются многократно.
+Лично я в этом смысла особого не вижу, и обычно выношу в словарь только те фрагменты, которые реально используются многократно.
 
-Кстати, поскольку это все еще обычный javascript, а собственно словарь — это, как можно видеть, просто объект (или, как их называют, ассоциативный массив), то и формировать его можно любым легальным для javascript способом. Например, в примере чуть выше массив значений для константы <code>colors</code> генерируется из строки с помощью метода <ahref="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/String/split">split</a>. Можно вообще весь объект для словаря импортировать из внешнего скрипта-библиотеки любым доступным способом — хоть по старинке через <code>&lt;script src="..."&lt;</code> или XHR->eval(), хоть через <code>import</code> (но убедитесь, что ваши клиенты этот новомодный способ поддерживают). Секций <code>.DICT</code> может быть несколько, все они объединяются в один общий словарь.
+Кстати, поскольку это все еще обычный javascript, а собственно словарь — это, как можно видеть, просто объект (или, как их еще называют, ассоциативный массив), то и формировать его можно любым легальным для javascript способом. Например, в примере чуть выше массив значений для константы <code>colors</code> генерируется из строки с помощью метода <ahref="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/String/split">split</a>. Можно вообще весь объект для словаря импортировать из внешнего скрипта-библиотеки любым доступным способом — хоть по старинке через <code>&lt;script src="..."&lt;</code> или XHR->eval(), хоть через <code>import</code> (но убедитесь, что ваши клиенты этот новомодный способ поддерживают). Секций <code>.DICT</code> может быть несколько, все они объединяются в один общий словарь.
 
 <source lang="javascript">
 const lib1={
@@ -178,39 +189,21 @@ const lib1={
 Собственный функционал описывается в секции <code>.FUNC</code> (от "functionality"):
 
 <source lang="javascript">
-'staff'.d("$department="
-
-	,'SELECT'.d("*@value url.depts:query,one-per-line"
-		,'OPTION'.d("!! .value") // записать в атрибут value
-	).ui("$department=#:value")
-	
-	'UL'.d("* (url.staff@ $department)uri:query" // для списка получить инфу по сотрудникам выбранного отдела
-		,'LI.person'.d("!! .description@title" // LI для каждого сотрудника, в атрибуте title некое его описание
-			,'name'.d("! (.firstname .middlename .lastname)spaced") // вывести ФИО через пробел
-			,'contact'.d("! ((.phone .skype .email .postal)first-available no-contact)?") // и какой-нибудь один контакт
-		)
-	)
+'UL.users'.d("* :query`https://jsonplaceholder.typicode.com/users"
+	,'LI'.d("! (.name .username:allcaps .address.city):aka,allcaps")
+		.ui("(.address.street .address.suite .address.city .address.zipcode)lines:alert")
 )
 .DICT({
-	url	: (base=>({
-			depts: base+"/departments.txt",
-			staff: base+"/staff.php?"
-		}))("https://dapmx.org")
+	"no-contact": "No contacts available for this person"
 })
 .FUNC({
-	convert:{
-		"one-per-line": text=>text.split(/\n/g) // разбить текст на массив строк
+	convert: {
+		allcaps: o=> o.toUpperCase(),
+		aka	: o => o.name + " also known as "+o.username+" from the city of "+o.city
 	},
 	flatten:{
-		"first-available": (values,names)=>{ // агрегатору передаются значения и имена аргументов
-			for(let i=values.length;i--;) // из всех аргументов (передаются в обратном порядке)
-				if(values[i]) // найти первый непустой аргумент
-					return names[i]+": "+values[i]; // и вернуть его вместе с именем
-		}
+		lines : values=>"Address:\n" + values.reverse().join("\n")
 	}
-})
-.DICT({
-	"no-contact": "No contacts available for this person"
 })
 </source>
 
