--- a/history
+++ b/history
@@ -49,7 +49,11 @@
 )
 </source>
 
-Здесь уже имеем зависимость содержимого элемента <code>'details'</code> (что в переводе н HTML означает <code>&lt;DIV class="details"&gt;</code>) от того, какой пользователь выбран. Выбранный пользователь, таким образом, оказывается переменной состояния. Такие переменные в dap-правилах обозначаются префиксом <code>$</code> (как s в "state"). При нажатии на любой из элементов LI изменяется содержимое переменной <code>$user</code>, на что элемент <code>'details'</code> автоматически реагирует и обновляется. Каким образом <code>'details'</code> узнает, что надо бы обновиться? Очень просто: в его правиле генерации присутствует обращение к переменной <code>$user</code>, а в правиле реакции элемента LI эта переменная как раз и изменяется.
+Здесь уже имеем зависимость содержимого элемента <code>'details'</code> (что в переводе н HTML означает <code>&lt;DIV class="details"&gt;</code>) от того, какой пользователь выбран. Выбранный пользователь, таким образом, оказывается переменной состояния. Такие переменные в dap-правилах обозначаются префиксом <code>$</code> (как s в "state"). При нажатии на любой из элементов LI изменяется содержимое переменной <code>$user</code>, на что элемент <code>'details'</code> автоматически реагирует и обновляется.
+
+В dap структура программы определяет сразу и модель состояния и модель взаимодействия с пользователем (отображение и реакции). С одной стороны это позволяет писать красивый, лаконичный и понятный код, но с другой стороны — требует четкой иерархической структуры приложения. Лично я считаю это требование полезным ограничением: оно заставляет (и помогает) более тщательно прорабатывать логику приложения и избавляться от логических нестыковок.
+
+Каким образом <code>'details'</code> узнает, что надо бы обновиться? Очень просто: в его правиле генерации присутствует обращение к переменной <code>$user</code>, а в правиле реакции элемента LI эта переменная как раз и изменяется.
 
 Правила генерации — те, которые указываются с помощью метода <code>.d</code> — исполняются на фазе построения элемента. Правила реакции задаются методом <code>.ui</code> и исполняются при взаимодействии пользователя с элементом. Это два самых часто употребимых типа правил; кроме них есть еще несколько типов, но о них как-нибудь потом.
 
@@ -209,9 +213,8 @@ const lib1={
 
 Здесь собственный функционал тривиален, поэтому написан непосредственно "по месту". Разумеется, что-то более сложное имеет смысл писать самостоятельным модулем, а в <code>.FUNC</code> прописывать только протокол взаимодействия между этим модулем и dap. Скажем, в примере с игрой в крестики-нолики https://dap.js.org/samples/tictactoe.html (по мотивам React-туториала), вся логика игры описана в отдельном замыкании, а dap только связывает эту логику с картинкой на экране.
 
+Подробнее познакомиться с dap можно на сайте https://dap.js.org
 
+Да, вот еще что. В сжатом виде dap-движок (<code>&lt;script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"&gt;&lt;/script&gt;</code>
+) весит ни много ни мало 9 кБ. Девять(!) килобайт.
 
-
-Да, вот еще что. Все это великолепие в сжатом виде весит ни много ни мало 9 кБ. Девять(!) килобайт.
-
-Подробнее познакомиться с dap можно на https://dap.js.org
