--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -20,7 +20,7 @@
 	"LABEL.tg": "Телеграм",
 	"LABEL.wa": "Whatsapp",
 	
-	"BUTTON.ok":"Готово",
+	"BUTTON.ok":"OK",
 	"BUTTON.cancel":"Отмена",
 	"BUTTON.seek-rides":"Заказать поездку",
 	"BUTTON.add-ride":"Добавить поездку",
