--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -18,7 +18,7 @@
 	
 	"LABEL.vehicle": "Авто",
 	"LABEL.seats": "мест",
-	"LABEL.price": "цена",
+	"LABEL.price": "цена за 1",
 	"LABEL.note": "Примечания",
 	
 	"LABEL.name": "Имя или псевдоним",
