--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -31,5 +31,7 @@
 	"BUTTON.seek-rides":"Заказать поездку",
 	"BUTTON.add-ride":"Добавить поездку",
 	"BUTTON.contact-rider":"Связаться с водителем",
-	"BUTTON.contact-passenger":"Связаться с пассажиром"
+	"BUTTON.contact-passenger":"Связаться с пассажиром",
+	
+	".rides>UL:empty":"Нет таких поездок"
 }
