--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -37,5 +37,5 @@
 	"BUTTON.contact-rider":"Связаться с водителем",
 	"BUTTON.contact-passenger":"Связаться с пассажиром",
 	
-	".rides>UL:empty":"Нет таких поездок"
+	".rides>UL:empty":"Здесь будут предложения поездок по этому маршруту.\nПока таких предложений нет.\nСоздайте свою поездку!"
 }
