--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -26,5 +26,5 @@
 	"BUTTON.cancel":"Отмена",
 	"BUTTON.add-ride":"Добавить поездку",
 	
-	".rides>UL:empty":"Здесь будут предложения поездок по этому маршруту.\nПока таких предложений нет.\nСоздайте свою поездку!"
+	".rides>UL:empty":"Здесь будут предложения поездок по этому маршруту. Пока таких предложений нет. Добавьте свою поездку!"
 }
