--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -1,10 +1,12 @@
 {
 	"TAB.routes": "маршруты",
 	"TAB.rides": "попутчики",
+	"TAB.import": "импорт",
 	
-	"ROOF":"Моя поездка:",
-	".input.dpt": "Откуда:",
-	".input.arv": "Куда:",
+	".import:empty":"Моя поездка:",
+	
+	".input.dpt": "из",
+	".input.arv": "в",
 	
 	"SHIELD.dpt":"Откуда (область, район, пункт)",
 	"SHIELD.arv":"Куда (область, район, пункт)",
@@ -15,10 +17,12 @@
 	"SPAN.vehicle:empty": "пассажир",
 	"SPAN.seats:not(:empty)": "мест: ",
 	
-	"LABEL.vehicle": "Авто",
+	"LABEL.vehicle": "авто",
 	"LABEL.seats": "мест",
 	"LABEL.price": "цена за 1",
-	"LABEL.note": "Примечания",
+	"LABEL.note": "примечания",
+	"LABEL.tel":"телефон",
+	"LABEL.tgchat":"Telegram username",
 	
 	".vehicle>SELECT>OPTION[value='']": "я пассажирус",
 	
@@ -26,5 +30,6 @@
 	"BUTTON.cancel":"Отмена",
 	"BUTTON.add-ride":"Добавить поездку",
 	
-	".rides>UL:empty":"Здесь будут предложения поездок по этому маршруту. Пока таких предложений нет. Добавьте свою поездку!"
+	".routes>UL:empty":"Здесь будут маршруты, планируемые на сегодня. Данных пока нет. Проверьте соединение с интернетом.",
+	".rides>UL:empty":"Здесь будут предложения поездок по выбранному маршруту. Пока таких предложений нет. Добавьте свою поездку!"
 }
