--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -3,6 +3,9 @@
 	"TAB.rides": "попутчики",
 	"TAB.import": "импорт",
 	
+	"PAGE.rides>.title":"Попутчики по маршруту:",
+	"PAGE.routes":"Популярные маршруты:",
+	
 	".import:empty":"Моя поездка:",
 	
 	".input.dpt": "из",
@@ -22,13 +25,14 @@
 	"LABEL.price": "цена за 1",
 	"LABEL.note": "примечания",
 	"LABEL.tel":"телефон",
-	"LABEL.tgchat":"Telegram username",
+	"LABEL.tg":"telegram",
 	
 	".vehicle>SELECT>OPTION[value='']": "я пассажирус",
 	
 	"BUTTON.ok":"OK",
 	"BUTTON.cancel":"Отмена",
 	"BUTTON.add-ride":"Добавить поездку",
+	"BUTTON.drop":"×",
 	
 	".routes>UL:empty":"Здесь будут маршруты, планируемые на сегодня. Данных пока нет. Проверьте соединение с интернетом.",
 	".rides>UL:empty":"Здесь будут предложения поездок по выбранному маршруту. Пока таких предложений нет. Добавьте свою поездку!"
