--- a/samples/poputka/lang/ru.json
+++ b/samples/poputka/lang/ru.json
@@ -4,7 +4,7 @@
 	"TAB.import": "импорт",
 	
 	"PAGE.rides>.title":"Попутчики по маршруту:",
-	"PAGE.routes":"Популярные маршруты:",
+	"PAGE.routes>.title":"Популярные маршруты:",
 	
 	".import:empty":"Моя поездка:",
 	
@@ -33,6 +33,7 @@
 	"BUTTON.cancel":"Отмена",
 	"BUTTON.add-ride":"Добавить поездку",
 	"BUTTON.drop":"×",
+	"BUTTON.done":"×",
 	
 	".routes>UL:empty":"Здесь будут маршруты, планируемые на сегодня. Данных пока нет. Проверьте соединение с интернетом.",
 	".rides>UL:empty":"Здесь будут предложения поездок по выбранному маршруту. Пока таких предложений нет. Добавьте свою поездку!"
